ecmascript/parser/tests/test262-error-references/fail/baddfc428e73b8b8.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/baddfc428e73b8b8.js:1:1
  |
1 | import { a as enum } from 'foo'
  | ^^^^^^

